# sast-scanner-py

./: .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: sast.yml
docs/: demo-report.html
scanner/: engine.py  reporter.py
scanner/rules/: __init__.py  base.py  dangerous_functions.py  hardcoded_secrets.py  path_traversal.py  sql_injection.py  unsafe_deserialization.py  xss.py
tests/: test_rules.py
tests/fixtures/vulnerable_java/: VulnerableService.java
tests/fixtures/vulnerable_python/: vulnerable_app.py
